<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cpz</groupId>
    <artifactId>cpz-mvvm-processing-template</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>

    <name>cpz-mvvm-processing-template</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <processing.version>4.5.2</processing.version>
        <jogl.version>2.6.0</jogl.version>
        <processing.lib.dir>${project.basedir}/lib/Processing 4.5.2</processing.lib.dir>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.cpz</groupId>
            <artifactId>cpz-utils</artifactId>
            <version>0.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.cpz</groupId>
            <artifactId>cpz-mvvm-processing-controls</artifactId>
            <version>0.3.0</version>
        </dependency>

        <dependency>
            <groupId>org.processing</groupId>
            <artifactId>core</artifactId>
            <version>${processing.version}</version>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/core-${processing.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr</artifactId>
            <version>2.7.7</version>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/antlr-2.7.7.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>13.0</version>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/annotations-13.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>2.2.20</version>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/kotlin-stdlib-2.2.20.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-main</artifactId>
            <version>${jogl.version}</version>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-main-${jogl.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-android-aarch64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}-natives-android-aarch64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-android-x86_64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}-natives-android-x86_64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-freebsd-amd64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}-natives-freebsd-amd64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-linux-aarch64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}-natives-linux-aarch64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-linux-amd64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}-natives-linux-amd64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-linux-armv6hf</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}-natives-linux-armv6hf.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-macosx-universal</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}-natives-macosx-universal.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-windows-amd64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/gluegen-rt-${jogl.version}-natives-windows-amd64.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>${jogl.version}</version>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-main-${jogl.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-android-aarch64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}-natives-android-aarch64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-android-x86_64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}-natives-android-x86_64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-freebsd-amd64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}-natives-freebsd-amd64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-linux-aarch64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}-natives-linux-aarch64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-linux-amd64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}-natives-linux-amd64.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-linux-armv6hf</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}-natives-linux-armv6hf.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-macosx-universal</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}-natives-macosx-universal.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>${jogl.version}</version>
            <classifier>natives-windows-amd64</classifier>
            <scope>system</scope>
            <systemPath>${processing.lib.dir}/jogl-all-${jogl.version}-natives-windows-amd64.jar</systemPath>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
